namespace QuizMaster.API.Gateway.Configuration
{
    public class GrpcServerConfiguration
    {
        public string Account_Service { get; set; }
        public string Authentication_Service { get; set; }
        public string Media_Service { get; set; }
        public string Quiz_Category_Service { get; set; }
    }
}
